fix map overlapping contact form

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -415,7 +415,7 @@ img {
   display: grid;
   align-items: center;
   justify-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .contact-area form {
